started appconfig