@@ -4,12 +4,12 @@ import com.pluralsight.service.SpeakerService;
 import com.pluralsight.service.SpeakerServiceImplementation;
 
 public class Application {
-    public static void main(String args[]) {
-        System.out.println("Hello Spring!");
+    public static void main(String[] args) {
+        System.out.println("Hello Spring Framework!");
 
         SpeakerService service = new SpeakerServiceImplementation();
 
-        System.out.println(service.findAll().get(0).getFirstName());
+        System.out.println(service.findAll().getFirst().getFirstName());
 
 
     }
